Making the heading darker

--- a/css/layout/_header.scss
+++ b/css/layout/_header.scss
@@ -102,7 +102,7 @@ header.header {
       font-family: $font-primary;
       letter-spacing: 0.2rem;
 
-      // color: rgba($color-darkBlue, 0.8);
+      color: rgba($color-darkBlue, 0.3);
 
       color: rgba($color-darkBlue, 0.8);
 
