--- a/css/abstracts/_animations.scss
+++ b/css/abstracts/_animations.scss
@@ -1,50 +1,36 @@
-@keyframes moveLeft {
-  0% {
-    opacity: 0;
-    transform: translateX(-50%);
-  }
-  50% {
-    opacity: 0.1;
-    transform: translateX(-20%);
-  }
-  100% {
-    opacity: 1;
-    transform: translateX(0);
-  }
-}
-
-@keyframes moveRight {
-  0% {
-    opacity: 0;
-    transform: translateX(50%);
-  }
-  50% {
-    opacity: 0.1;
-    transform: translateX(20%);
-  }
-  100% {
-    opacity: 1;
-    transform: translateX(0);
-  }
-}
-@keyframes moveUp {
-  0% {
-    opacity: 0;
-    transform: translateY(135%);
-  }
-  50% {
-    opacity: 0.1;
-    transform: translateY(80%);
-  }
-  100% {
-    opacity: 1;
-    transform: translateY(0);
-  }
-}
-@keyframes moveUpHeadingBtn {
+@keyframes headerHeading {
   from {
     opacity: 0;
-    transform: translateY(180%);
+    transform: translateX(-100%);
+  }
+  to {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+h1.main-heading {
+  opacity: 0;
+  animation: headerHeading 1s ease-out 1s forwards;
+  &-2 {
+    animation-delay: 1.1s;
+  }
+  &-3 {
+    animation-delay: 1.2s;
+  }
+}
+p.mainOfHeader-text {
+  opacity: 0;
+  animation: headerHeading 1s ease-out 1.3s forwards;
+}
+a.mainOfHeader-btn {
+  opacity: 0;
+  animation: headerHeading 0.8s ease-out 1.8s forwards;
+}
+
+@keyframes topHeaderLink {
+  from {
+    opacity: 0;
+    transform: translateY(100%);
   }
   to {
     opacity: 1;
@@ -52,44 +38,20 @@
   }
 }
 
-@keyframes projectAppear {
-  0% {
-    opacity: 0;
-    transform: translatey(-20%) /*scale(0.9)*/;
-  }
-  50% {
-    opacity: 0.2;
-    transform: translateY(-3%);
-  }
-  100% {
-    opaciy: 1;
-    transform: translateY(0) /*scale(1)*/;
-  }
-}
-@keyframes arrowVisible {
-  0% {
-    opacity: 0;
-    transform: translate(-80%, 20%) /*scale(0.9)*/;
-  }
-  50% {
-    opacity: 0.1;
-    transform: translate(0%, 20%);
-  }
-  100% {
-    opaciy: 1;
-    transform: translate(75%, 20%) /*scale(1)*/;
-  }
+a.navbar__items--link {
+  opacity: 0;
+  animation: topHeaderLink 1s ease-out 1.5s forwards;
 }
 
-.block {
-  display: block !important;
-  animation: projectAppear 0.3s ease-in;
+.small-Opaque {
+  transform: scale(0.5);
+  opacity: 0;
 }
-.emphasize {
-  color: rgba($color-darkBlue, 0.9) !important;
-  // transform: scale(1.05);
+.down-Opaque {
+  transform: translateY(100%);
+  opacity: 0;
 }
-.show-icon {
-  animation: arrowVisible 0.4s ease-in-out;
-  visibility: visible !important;
+.down-Opaque-contact {
+  transform: translateY(10rem);
+  opacity: 0;
 }
