--- a/css/central.css
+++ b/css/central.css
@@ -1,177 +1,89 @@
-@-webkit-keyframes moveLeft {
-  0% {
-    opacity: 0;
-    transform: translateX(-50%);
-  }
-  50% {
-    opacity: 0.1;
-    transform: translateX(-20%);
-  }
-  100% {
-    opacity: 1;
-    transform: translateX(0);
-  }
-}
-@keyframes moveLeft {
-  0% {
-    opacity: 0;
-    transform: translateX(-50%);
-  }
-  50% {
-    opacity: 0.1;
-    transform: translateX(-20%);
-  }
-  100% {
-    opacity: 1;
-    transform: translateX(0);
-  }
-}
-@-webkit-keyframes moveRight {
-  0% {
-    opacity: 0;
-    transform: translateX(50%);
-  }
-  50% {
-    opacity: 0.1;
-    transform: translateX(20%);
-  }
-  100% {
-    opacity: 1;
-    transform: translateX(0);
-  }
-}
-@keyframes moveRight {
-  0% {
-    opacity: 0;
-    transform: translateX(50%);
-  }
-  50% {
-    opacity: 0.1;
-    transform: translateX(20%);
-  }
-  100% {
-    opacity: 1;
-    transform: translateX(0);
-  }
-}
-@-webkit-keyframes moveUp {
-  0% {
-    opacity: 0;
-    transform: translateY(135%);
-  }
-  50% {
-    opacity: 0.1;
-    transform: translateY(80%);
-  }
-  100% {
-    opacity: 1;
-    transform: translateY(0);
-  }
-}
-@keyframes moveUp {
-  0% {
-    opacity: 0;
-    transform: translateY(135%);
-  }
-  50% {
-    opacity: 0.1;
-    transform: translateY(80%);
-  }
-  100% {
-    opacity: 1;
-    transform: translateY(0);
-  }
-}
-@-webkit-keyframes moveUpHeadingBtn {
+@-webkit-keyframes headerHeading {
   from {
     opacity: 0;
-    transform: translateY(180%);
+    transform: translateX(-100%);
+  }
+  to {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+@keyframes headerHeading {
+  from {
+    opacity: 0;
+    transform: translateX(-100%);
+  }
+  to {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+h1.main-heading {
+  opacity: 0;
+  -webkit-animation: headerHeading 1s ease-out 1s forwards;
+          animation: headerHeading 1s ease-out 1s forwards;
+}
+h1.main-heading-2 {
+  -webkit-animation-delay: 1.1s;
+          animation-delay: 1.1s;
+}
+h1.main-heading-3 {
+  -webkit-animation-delay: 1.2s;
+          animation-delay: 1.2s;
+}
+
+p.mainOfHeader-text {
+  opacity: 0;
+  -webkit-animation: headerHeading 1s ease-out 1.3s forwards;
+          animation: headerHeading 1s ease-out 1.3s forwards;
+}
+
+a.mainOfHeader-btn {
+  opacity: 0;
+  -webkit-animation: headerHeading 0.8s ease-out 1.8s forwards;
+          animation: headerHeading 0.8s ease-out 1.8s forwards;
+}
+
+@-webkit-keyframes topHeaderLink {
+  from {
+    opacity: 0;
+    transform: translateY(100%);
   }
   to {
     opacity: 1;
     transform: translateY(0);
   }
 }
-@keyframes moveUpHeadingBtn {
+
+@keyframes topHeaderLink {
   from {
     opacity: 0;
-    transform: translateY(180%);
+    transform: translateY(100%);
   }
   to {
     opacity: 1;
     transform: translateY(0);
   }
 }
-@-webkit-keyframes projectAppear {
-  0% {
-    opacity: 0;
-    transform: translatey(-20%);
-  }
-  50% {
-    opacity: 0.2;
-    transform: translateY(-3%);
-  }
-  100% {
-    opaciy: 1;
-    transform: translateY(0);
-  }
-}
-@keyframes projectAppear {
-  0% {
-    opacity: 0;
-    transform: translatey(-20%);
-  }
-  50% {
-    opacity: 0.2;
-    transform: translateY(-3%);
-  }
-  100% {
-    opaciy: 1;
-    transform: translateY(0);
-  }
-}
-@-webkit-keyframes arrowVisible {
-  0% {
-    opacity: 0;
-    transform: translate(-80%, 20%);
-  }
-  50% {
-    opacity: 0.1;
-    transform: translate(0%, 20%);
-  }
-  100% {
-    opaciy: 1;
-    transform: translate(75%, 20%);
-  }
-}
-@keyframes arrowVisible {
-  0% {
-    opacity: 0;
-    transform: translate(-80%, 20%);
-  }
-  50% {
-    opacity: 0.1;
-    transform: translate(0%, 20%);
-  }
-  100% {
-    opaciy: 1;
-    transform: translate(75%, 20%);
-  }
-}
-.block {
-  display: block !important;
-  -webkit-animation: projectAppear 0.3s ease-in;
-          animation: projectAppear 0.3s ease-in;
+a.navbar__items--link {
+  opacity: 0;
+  -webkit-animation: topHeaderLink 1s ease-out 1.5s forwards;
+          animation: topHeaderLink 1s ease-out 1.5s forwards;
 }
 
-.emphasize {
-  color: rgba(11, 15, 20, 0.9) !important;
+.small-Opaque {
+  transform: scale(0.5);
+  opacity: 0;
 }
 
-.show-icon {
-  -webkit-animation: arrowVisible 0.4s ease-in-out;
-          animation: arrowVisible 0.4s ease-in-out;
-  visibility: visible !important;
+.down-Opaque {
+  transform: translateY(100%);
+  opacity: 0;
+}
+
+.down-Opaque-contact {
+  transform: translateY(10rem);
+  opacity: 0;
 }
 
 /* BREAKPOINT */
@@ -499,6 +411,9 @@ header.header .mainOfHeader-btn:hover {
   display: flex;
   padding: 5rem 8rem;
 }
+.main .about div {
+  transition: all 0.8s ease-in-out;
+}
 @media (max-width: 768px) {
   .main .about {
     flex-direction: column;
@@ -794,6 +709,9 @@ footer {
   padding: 5rem 6rem 0;
   color: #403d5c;
 }
+footer > * {
+  transition: all 0.8s ease-out;
+}
 @media (max-width: 768px) {
   footer {
     padding: 10rem 8rem 0;
@@ -928,6 +846,7 @@ section#contact article {
 }
 section#contact article figure {
   background: #ded2d6;
+  transition: all 0.7s ease-out;
 }
 @media (max-width: 768px) {
   section#contact article figure {
@@ -984,6 +903,7 @@ section#contact article figure div.art div.dashed {
   border-style: dashed;
 }
 section#contact article form {
+  transition: all 0.7s ease-out;
   font-family: "Montserrat", sans-serif;
   background-color: #fff;
   font-size: 1.6rem;
@@ -1294,6 +1214,7 @@ section#company article.company__stats ul {
 section#company article.company__stats ul li {
   padding: 1rem;
   text-align: center;
+  transition: all 0.8s ease-in-out;
 }
 @media (max-width: 600px) {
   section#company article.company__stats ul li {
@@ -1380,6 +1301,7 @@ section#company article.company__stats ul li span ion-icon {
   }
 }
 section#company article.company__explore {
+  transition: all 1s;
   height: 60%;
   text-align: center;
   color: #0b0f14;
@@ -1504,6 +1426,9 @@ section#projects {
   min-height: 100vh;
   display: grid;
   grid-template-columns: 30% 20% 1fr;
+}
+section#projects > * {
+  transition: all 0.7s ease-out;
 }
 @media (max-width: 768px) {
   section#projects {
