--- a/css/layout/_main.scss
+++ b/css/layout/_main.scss
@@ -4,6 +4,9 @@
   .about {
     display: flex;
     padding: 5rem 8rem;
+    div {
+      transition: all 0.8s ease-in-out;
+    }
     @include respond(768px) {
       flex-direction: column;
       align-items: center;
